--- a/apps/offlegacy.org/package.json
+++ b/apps/offlegacy.org/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@suspensive/suspensive.org",
+  "name": "@offlegacy/offlegacy.org",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -9,17 +10,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "geist": "^1.3.1",
+    "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@offlegacy/configs": "workspace:*",
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0"
+    "eslint-config-next": "15.0.0-rc.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.9",
+    "typescript": "^5"
   }
 }
